--- a/index.css
+++ b/index.css
@@ -6,7 +6,7 @@ header{
     background-color: yellow;
     text-align: center;
 }
-h1, li{
+h1, a{
     color: black;
     font-family: 'Blinker', sans-serif;
 }
@@ -14,10 +14,12 @@ nav ul {
     list-style: none;
 }
 nav ul li {
+    font-size: larger;
     list-style: none;
     display: inline;
-    margin-left: 20px;
-    margin-right: 20px;
+    padding: 20px;
+    margin-left: auto;
+    margin-right: auto;
 }
 main section h1, main section a {
     color: yellow;
