--- a/index.css
+++ b/index.css
@@ -1,30 +1,94 @@
 @import url('https://fonts.cdnfonts.com/css/blinker');
-body {
-    background-color: black;
+html {
+    background-image: linear-gradient(to bottom right, #845ec2, #008f7a);
+    background-attachment: fixed;
 }
 header{
-    background-color: yellow;
-    text-align: center;
+    color: #e6fafc;
+    text-align: left;
 }
 h1, a{
-    color: black;
     font-family: 'Blinker', sans-serif;
 }
-nav ul {
-    list-style: none;
+#nav-container{
+    border-radius: 50px;
+    background-color: #e6fafc;
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
-nav ul li {
-    font-size: larger;
+.navbar-nav{
+    list-style: none;
+    text-align: center;
+}
+.nav-item{
+    font-size:x-large;
     list-style: none;
     display: inline;
-    padding: 20px;
+    padding: 50px;
     margin-left: auto;
     margin-right: auto;
 }
-main h1, main section a, p {
-    color: yellow;
-    font-family: 'Blinker', sans-serif;
+.nav-link{
+    color: black;
+    text-decoration: none;
+    font-weight: 500;
+    position:relative
 }
-a {
+.nav-link:hover, .nav-link.active{
+    color: #0F0F0F
+}
+.nav-link::before{
+    content:"";
+    position:absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 0;
+    height: 2px;
+    background-color: #005148;
+    visibility: hidden;
+    transition: 0.3s ease-in-out;
+}
+.nav-link:hover::before{
+    width: 100%;
+    visibility: visible;
+}
+#main{
+    border-radius: 50px;
+    background: rgba(230,250,252,0.7);
+    padding:20px;
+    margin-top: 20px;
+}
+main h1, main section a, p {
+    color: black;
+    font-family: 'Blinker', sans-serif;
+    text-decoration: none;
+    margin-left: 30px;
+}
+.main-link{
+    font-size: larger;
+    font-weight: 500;
+    position: relative;
+}
+.main-link:hover, .main-link.active{
+    color: #0f0f0f;
+}
+.main-link::before{
+    content:"";
+    position:absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 0;
+    height: 2px;
+    background-color: black;
+    visibility: hidden;
+    transition: 0.3s ease-in-out;
+}
+.main-link:hover::before{
+    width: 100%;
+    visibility: visible;
+}
+p{
     font-size: larger;
 }
